# LMS_SYSTEM

./: .env.example  .geminiignore  .gitignore  0001-LMS-17-Update-Scan-Face-When-Exam.patch  AGENTS.md  Classroom_RAG_LanceDB_Spec.md  README.md  docker-compose.yml  inspect_address.py  inspect_db.py  list_voices.py  package-lock.json  pyproject.toml  requirements.txt  verify_address_logic.py
.claude/skills/lms-plan-first/: SKILL.md
LMS_SYSTEM/: asgi.py  settings.py  urls.py  wsgi.py
bruno/: opencollection.yml
bruno/Auth/: Login.yml  Register.yml
bruno/Consumer/: List Consumers.yml  Retrieve Consumer.yml  Update Consumer.yml  folder.yml
bruno/Consumer/Auth/: Login.yml  Register.yml
bruno/Space/: Create Space.yml  Delete Space.yml  List Spaces.yml  My Spaces.yml  Retrieve Space.yml  Update Space.yml  folder.yml
bruno/Space/Auth/: Login.yml  Register.yml
bruno/Space/Classroom/: Create Classroom.yml  Delete Classroom.yml  List Classrooms.yml  Retrieve Classroom.yml  Update Classroom.yml
bruno/environments/: Local.yml
core/: apps.py  urls.py
core/ai/: __init__.py
core/ai/embeddings/: __init__.py
core/ai/langchain/: agent.py  llm.py  memory.py  tools.py
core/ai/llm/: __init__.py
core/ai/memory/: __init__.py  conversation_memory.py
core/ai/rag/: __init__.py
core/ai/stt/: __init__.py  whisper_client.py
core/ai/tools/: classroom_tools.py  tool_agent.py  tool_executor.py
core/ai/tts/: __init__.py  edge_tts_client.py
core/ai/vector_store/: __init__.py
core/backend/: exceptions.py
core/backend/auth/: base_auth_services.py  jwt_auth.py  refresh.py
core/configs/: database.py
core/db/: routers.py
core/firebase/client/: firebase_app.py
core/firebase/fcm/: fcm_service.py
core/firebase/realtime/: realtime_service.py
core/management/commands/: backfill_certificates.py  lms_sync_cassandra.py  show_urls.py
core/models/: __init__.py  abstract_auth.py  base_model.py  cassandra.py  social_account.py
core/models/mixins/: audit_log.py  soft_deletion.py
core/notification/dto/: notification_dto.py
core/notification/enums/: __init__.py  notification_provider.py
core/notification/interfaces/: notification_interface.py
core/notification/services/: base_realtime_service.py  mail_service.py  notification_service.py
core/repositories/: base_repository.py
core/search_engine/: __init__.py
core/search_engine/typesense/: __init__.py  client.py  indexer.py  schemas.py  service.py
core/serializers/auth/: __init__.py  auth_response_serializer.py
core/serializers/classroom/: __init__.py  blacklist_serializer.py  classroom_response_serializer.py
core/serializers/course/: __init__.py  course_response_serializer.py
core/services/: base_service.py
core/storages/: storage_service.py
core/utils/: uuid.py
core/views/: mixins.py  search_api.py  storage_views.py  ws_test_view.py
core/views/api/: base_viewset.py  pagination.py
core/ws/: routing.py
core/ws/consumers/: attendance_consumer.py  base_consumer.py  message_consumer.py  rtc_consumer.py
core/ws/middleware/: jwt_auth_middleware.py
face_service/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
features/account/: __init__.py  address_urls.py  apps.py  models.py  urls.py
features/account/consumer/: urls.py
features/account/otp/: apps.py
features/account/space/: urls.py
features/account/static_data/: __init__.py  vn_provinces.json
features/account/user_setting/: constants.py  urls.py
features/account/voice_setting/: urls.py
features/ai/langgraph/: cassandra_saver.py  memory_manager.py  rag_graph.py
features/ai/models/: __init__.py  ai_conversation_session.py
features/ai/repositories/: __init__.py  ai_conversation_session_repository.py  ai_message_repository.py
features/ai/services/: __init__.py  ai_conversation_session_service.py  langchain_chat_history.py  short_term_memory.py
features/calendar/: consumer_urls.py  urls.py
features/calendar/models/: __init__.py  attendance.py  calendar_event.py  leave_request.py
features/calendar/repositories/: attendance_repository.py  calendar_event_repository.py  leave_request_repository.py
features/calendar/serializers/: attendance_serializer.py  calendar_serializer.py  leave_request_serializer.py
features/calendar/services/: attendance_service.py  calendar_notification_service.py  calendar_service.py  leave_request_service.py
features/calendar/tasks/: calendar_email_tasks.py
features/calendar/viewsets/: attendance_viewset.py  (+5 more)
features/chat/: apps.py  urls.py
features/course/: apps.py  consumer_urls.py  urls.py  urls_course_lessons.py
features/face/: apps.py  space_urls.py  urls.py
features/notification/: apps.py  urls.py
features/payment/: apps.py  urls.py
features/portfolio/: apps.py  urls.py
features/quiz/: apps.py  consumer_urls.py  urls.py
features/quiz_collection/: apps.py  certificate_urls.py  consumer_urls.py  urls.py
features/ranking/: apps.py  consumer_urls.py  defaults.py  space_urls.py
features/resource/: apps.py  models.py  urls.py
features/sharing/: apps.py  urls.py
features/social/: apps.py  urls.py
scripts/: backfill_direct_pair_key.py  init_vector_db.py  lancedb_clear.py  lancedb_inspect.py  lancedb_reindex.py  lancedb_reindex_classroom.py  list_lancedb_docs.py  seed_vn_provinces.py  sync_address_table.py  sync_cassandra_adhoc.py  sync_docs_schema.py  sync_user_profile_table.py  test_classroom_isolation.py  test_email.py  test_email_template.py  test_rag_filtering.py  typesense_drop.py  typesense_export.py
skills/lms-feature/: SKILL.md
templates/: test_chat.html
templates/emails/: calendar_event_notification.html  calendar_recurring_schedule.html  notification_template.html  token_template.html
(+452 files in other folders)
