[project]
name = "lms-face-service"
version = "0.1.0"
description = "Face recognition microservice for LMS exam proctoring"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.19.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.24,<2.0",
    "pydantic>=2.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.32.0" }
insightface = ">=0.7.3"
onnxruntime = ">=1.19.0"
opencv-python-headless = ">=4.10.0"
numpy = ">=1.24,<2.0"
pydantic = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
